ipu7: ipu-bridge: Adding file for out-of-tree support
The IPU7 bridge name has been changed to use ipu-bridge file, which
is not included in. Therefore, adding ipu-bridge file from kernel.org
for Out-of-tree support.

Signed-off-by: Jason Chen <jason.z.chen@intel.corp-partner.google.com>

--- a/drivers/media/pci/intel/ipu7/Makefile
+++ b/drivers/media/pci/intel/ipu7/Makefile
@@ -15,7 +15,8 @@ intel-ipu7-objs				+= ipu7.o \
 					   ipu7-buttress.o \
 					   ipu7-cpd.o \
 					   ipu7-syscom.o \
-					   ipu7-boot.o
+					   ipu7-boot.o \
+					   ../ipu-bridge.o
 
 obj-$(CONFIG_VIDEO_INTEL_IPU7)		+= intel-ipu7.o
 
