PTL release for iot on 2025-12-10
Signed-off-by: Hao Yao <hao.yao@intel.com>

--- a/drivers/media/pci/intel/ipu7/Makefile
+++ b/drivers/media/pci/intel/ipu7/Makefile
@@ -27,6 +27,9 @@ intel-ipu7-isys-objs			+= ipu7-isys.o \
 					   ipu7-isys-queue.o \
 					   ipu7-isys-subdev.o
 
+ifdef CONFIG_VIDEO_INTEL_IPU7_MGC
+intel-ipu7-isys-objs                    += ipu7-isys-tpg.o
+endif
 obj-$(CONFIG_VIDEO_INTEL_IPU7)		+= intel-ipu7-isys.o
 
 obj-$(CONFIG_VIDEO_INTEL_IPU7)		+= psys/
