--- a/dkms.conf
+++ b/dkms.conf
@@ -4,16 +4,55 @@ PACKAGE_VERSION=0.0.0
 MAKE="make KERNELRELEASE=$kernelver KERNEL_SRC=$kernel_source_dir"
 CLEAN="make KERNELRELEASE=$kernelver KERNEL_SRC=$kernel_source_dir clean"
 AUTOINSTALL="yes"
-BUILD_EXCLUSIVE_CONFIG="CONFIG_VIDEO_V4L2_I2C"
 
-BUILT_MODULE_NAME[0]="intel-ipu7"
-BUILT_MODULE_LOCATION[0]="drivers/media/pci/intel/ipu7"
+version_lt() {
+  IFS='.' read -r i j k <<< "$1"
+  IFS='.' read -r a b c <<< "$2"
+  i=${i:-0}
+  j=${j:-0}
+  k=${k:-0}
+  a=${a:-0}
+  b=${b:-0}
+  c=${c:-0}
+  if [ "$i" -lt "$a" ]; then
+    return 0
+  elif [ "$i" -eq "$a" ]; then
+    if [ "$j" -lt "$b" ]; then
+      return 0
+    elif [ "$j" -eq "$b" ]; then
+      if [ "$k" -lt "$c" ]; then
+        return 0
+      fi
+    fi
+  fi
+  return 1
+}
+
+KERNEL_VERSION=$(echo ${kernelver} | sed 's/[^0-9.]*\([0-9.]*\).*/\1/')
+KV_IPU7_ISYS=6.17.0
+
+BUILT_MODULE_NAME[0]="ipu-acpi"
+BUILT_MODULE_LOCATION[0]="drivers/media/platform/intel"
 DEST_MODULE_LOCATION[0]="/updates"
 
-BUILT_MODULE_NAME[1]="intel-ipu7-isys"
-BUILT_MODULE_LOCATION[1]="drivers/media/pci/intel/ipu7"
+BUILT_MODULE_NAME[1]="ipu-acpi-pdata"
+BUILT_MODULE_LOCATION[1]="drivers/media/platform/intel"
 DEST_MODULE_LOCATION[1]="/updates"
 
-BUILT_MODULE_NAME[2]="intel-ipu7-psys"
-BUILT_MODULE_LOCATION[2]="drivers/media/pci/intel/ipu7/psys"
+BUILT_MODULE_NAME[2]="ipu-acpi-common"
+BUILT_MODULE_LOCATION[2]="drivers/media/platform/intel"
 DEST_MODULE_LOCATION[2]="/updates"
+
+BUILT_MODULE_NAME[3]="intel-ipu7-psys"
+BUILT_MODULE_LOCATION[3]="drivers/media/pci/intel/ipu7/psys"
+DEST_MODULE_LOCATION[3]="/updates"
+
+if version_lt ${KERNEL_VERSION} ${KV_IPU7_ISYS}; then
+    BUILT_MODULE_NAME[4]="intel-ipu7"
+    BUILT_MODULE_LOCATION[4]="drivers/media/pci/intel/ipu7"
+    DEST_MODULE_LOCATION[4]="/updates"
+
+    BUILT_MODULE_NAME[5]="intel-ipu7-isys"
+    BUILT_MODULE_LOCATION[5]="drivers/media/pci/intel/ipu7"
+    DEST_MODULE_LOCATION[5]="/updates"
+fi
